[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://actors/flying_monkey/flying_monkey.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 6 )

[sub_resource type="CircleShape2D" id=2]

[node name="FlyingMonkey" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1.90735e-06, -10 )
scale = Vector2( 0.296875, 0.296875 )
texture = ExtResource( 1 )

[node name="DetectionArea" type="Area2D" parent="."]

[node name="DetectionAreaCollision" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 2 )

[node name="SwoopTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="MoveToSprite" type="Sprite" parent="."]
visible = false
modulate = Color( 0.964706, 0.427451, 0.427451, 1 )
position = Vector2( -1.90735e-06, -10 )
scale = Vector2( 0.296875, 0.296875 )
texture = ExtResource( 1 )

[connection signal="timeout" from="SwoopTimer" to="." method="_on_SwoopTimer_timeout"]
